--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: Inter, Helvetica, sans-serif;
 }
 
 @layer utilities {
