--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
 body {
-  font-family: Inter, Helvetica, sans-serif;
+  font-family: Poppins, Helvetica, sans-serif;
 }
 
 @layer utilities {
