--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body {
-  font-family: Poppins, Helvetica, sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 @layer utilities {
